fix overflow sytle on scrolled headroom header

--- a/src/app/modules/navigation/Header/NavBar/NavBar.scss
+++ b/src/app/modules/navigation/Header/NavBar/NavBar.scss
@@ -28,7 +28,6 @@
 	  transition: transform 200ms ease-in-out;
 		background: rgba(255, 255, 255, 0.95);
 		height: 60px;
-		overflow: hidden;
 	}
 
 	.headroom--unpinned {
